# tgbusiness-suite

backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py  constants.py  database.py  encryption.py  exceptions.py  security.py
backend/app/modules/: __init__.py
backend/app/modules/admin/: models.py
backend/app/modules/auth/: __init__.py  dependencies.py  router.py  schemas.py  service.py
backend/app/modules/automation/: models.py
backend/app/modules/billing/: __init__.py  models.py  router.py  schemas.py
backend/app/modules/organizations/: models.py
backend/app/modules/proxies/: router.py  schemas.py
backend/app/modules/telegram/: __init__.py
backend/app/modules/users/: models.py
docker/: docker-compose.yml
frontend/: Dockerfile  package.json
frontend/src/app/: layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx  page.tsx
frontend/src/lib/: api-client.ts
tg-business-suite (3)/tg-business-suite/backend/app/modules/automation/: __init__.py  router.py  schemas.py  service.py  tasks.py
tg-business-suite (3)/tg-business-suite/docker/nginx/: nginx.conf
tg-business-suite (3)/tg-business-suite/docker/postgres/: init.sql
tg-business-suite (3)/tg-business-suite/docs/: DEPLOYMENT.md
tg-business-suite (3)/tg-business-suite/frontend/: package.json
tg-business-suite (3)/tg-business-suite/frontend/src/app/: layout.tsx
tg-business-suite (3)/tg-business-suite/frontend/src/store/: auth-store.ts
(+11 files in other folders)
